@@ -1,3 +1,7 @@
+Aug 21, 2006
+
+* ADDED: Create listing and predicate headers using style.
+
 VERSION 0.95
 ============
 
